--- a/config/controller.yaml
+++ b/config/controller.yaml
@@ -68,8 +68,8 @@ local_costmap:
     ros__parameters:
       update_frequency: 5.0
       publish_frequency: 2.0
-      global_frame: odom
-      robot_base_frame: base_footprint
+      global_frame: map
+      robot_base_frame: base_link
       use_sim_time: True
       rolling_window: true
       width: 3
