--- a/config/planner_server.yaml
+++ b/config/planner_server.yaml
@@ -18,8 +18,8 @@ global_costmap:
     ros__parameters:
       update_frequency: 1.0
       publish_frequency: 1.0
-      global_frame: map
-      robot_base_frame: base_footprint
+      global_frame: "map"
+      robot_base_frame: "base_link"
       use_sim_time: True
       robot_radius: 0.3
       resolution: 0.05
