--- a/config/controller.yaml
+++ b/config/controller.yaml
@@ -1,6 +1,6 @@
 controller_server:
   ros__parameters:
-    use_sim_time: True
+    use_sim_time: False
     # controller_frequency: 20.0
     controller_frequency: 5.0
     min_x_velocity_threshold: 0.001
@@ -70,7 +70,7 @@ local_costmap:
       publish_frequency: 2.0
       global_frame: map
       robot_base_frame: base_link
-      use_sim_time: True
+      use_sim_time: False
       rolling_window: true
       width: 3
       height: 3
