--- a/config/controller.yaml
+++ b/config/controller.yaml
@@ -8,12 +8,12 @@ controller_server:
     min_theta_velocity_threshold: 0.001
     failure_tolerance: 0.3
     progress_checker_plugin: "progress_checker"
-    goal_checker_plugins: ["general_goal_checker"] 
+    goal_checker_plugins: ["general_goal_checker"]
     controller_plugins: ["FollowPath"]
     # Progress checker parameters
     progress_checker:
       plugin: "nav2_controller::SimpleProgressChecker"
-      required_movement_radius: 0.5
+      required_movement_radius: 0.01
       movement_time_allowance: 10.0
     # Goal checker parameters
     general_goal_checker:
@@ -30,22 +30,23 @@ controller_server:
       max_vel_x: 0.26
       max_vel_y: 0.0
       max_vel_theta: 1.0
-      min_speed_xy: 0.0
-      max_speed_xy: 0.26
+      min_speed_xy: -0.5
+      max_speed_xy: 0.5
       min_speed_theta: 0.0
+      max_speed_theta: -3.2
       acc_lim_x: 2.5
       acc_lim_y: 0.0
-      acc_lim_theta: 3.2
+      acc_lim_theta: 6.4
       decel_lim_x: -2.5
       decel_lim_y: 0.0
-      decel_lim_theta: -3.2
+      decel_lim_theta: -6.4
       vx_samples: 20
       vy_samples: 5
       vtheta_samples: 20
-      sim_time: 1.7
-      linear_granularity: 0.05
+      sim_time: 0.5
+      linear_granularity: 0.025
       angular_granularity: 0.025
-      transform_tolerance: 0.2
+      transform_tolerance: 0.5
       xy_goal_tolerance: 0.25
       trans_stopped_velocity: 0.25
       short_circuit_trajectory_evaluation: True
@@ -62,12 +63,11 @@ controller_server:
       RotateToGoal.scale: 50.0
       RotateToGoal.slowing_factor: 5.0
       RotateToGoal.lookahead_time: -1.0
-
 local_costmap:
   local_costmap:
     ros__parameters:
       update_frequency: 5.0
-      publish_frequency: 2.0
+      publish_frequency: 1.0
       global_frame: map
       robot_base_frame: base_link
       use_sim_time: False
@@ -75,16 +75,16 @@ local_costmap:
       width: 3
       height: 3
       resolution: 0.05
-      robot_radius: 0.4
+      robot_radius: 0.1
       # footprint: '[ [0.65, 0.65], [0.65, -0.65], [-0.65, -0.65], [-0.65, 0.65] ]'
       plugins: ["voxel_layer", "inflation_layer"]
       inflation_layer:
         plugin: "nav2_costmap_2d::InflationLayer"
-        cost_scaling_factor: 3.0
+        cost_scaling_factor: 1.5
         inflation_radius: 0.15
       voxel_layer:
         plugin: "nav2_costmap_2d::VoxelLayer"
-        enabled: True
+        enabled: False
         publish_voxel_map: True
         origin_z: 0.0
         z_resolution: 0.05
@@ -95,7 +95,7 @@ local_costmap:
         scan:
           topic: /scan
           max_obstacle_height: 2.0
-          clearing: True
+          clearing: False
           marking: True
           data_type: "LaserScan"
           raytrace_max_range: 3.0
@@ -105,16 +105,14 @@ local_costmap:
       static_layer:
         map_subscribe_transient_local: True
       always_send_full_costmap: True
-
-  # Not included in course
-  # local_costmap_client:
-  #   ros__parameters:
-  #     use_sim_time: False
-  # local_costmap_rclcpp_node:
-  #   ros__parameters:
-  #     use_sim_time: False
-
-  # Not included in course
+#   # Not included in course
+#   local_costmap_client:
+#     ros__parameters:
+#       use_sim_time: False
+#   local_costmap_rclcpp_node:
+#     ros__parameters:
+#       use_sim_time: False
+#   #Not included in course
 # controller_server_rclcpp_node:
 #   ros__parameters:
 #     use_sim_time: False
